feat: Financial Bot

--- a/Send/Send.csproj
+++ b/Send/Send.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.0" />
+    <PackageReference Include="EasyNetQ" Version="5.2.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
