--- a/FinancialBot/FinancialBot.csproj
+++ b/FinancialBot/FinancialBot.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="5.2.0" />
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
