feat: added docker

--- a/FinancialChat/appsettings.json
+++ b/FinancialChat/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FinancialChat;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=db;Database=FinancialChat;User Id=SA;Password=u*G5)w(Nax"
   },
   "Logging": {
       "LogLevel": {
@@ -14,6 +14,9 @@
       "FinancialChat": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "Development"
     }
   },
 "AllowedHosts": "*"
